--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
             <div id="board-grid" class="board-grid"></div>
         </div>
         <div class="callouts">
-            <h3>Callouts</h3>
-            <p id="callout-list">No callouts yet!</p>
+            <p id="callout-list">Please wait for the game to start</p>
         </div>
-        <button id="generate-board">Generate Board</button>
+        <button id="generate-board">Join The Game!</button>
     </div>
     <script src="app.js"></script>
 </body>
