--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steelers Blitz Bingo</title>
+    <title>Steelers Bingo Blitz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Steelers Blitz Bingo</h1>
+        <h1>Steelers Bingo Blitz</h1>
+        <img src="Pittsburgh_Steelers_logo.svg.png" alt="Steelers Logo" id="steelers-logo"></img>
+        <img src="bingo_ld.gif" alt="Steelers Logo" id="bingo-gif" style="display: none;"></img>
         <div class="bingo-board">
             <div class="bingo-header">
                 <span>B</span>
@@ -20,7 +22,7 @@
             <div id="board-grid" class="board-grid"></div>
         </div>
         <div class="callouts">
-            <p id="callout-list">Please wait for the game to start</p>
+            <p id="callout-list">Click the button below to join the game</p>
         </div>
         <button id="generate-board">Join The Game!</button>
     </div>
